@@ -3,6 +3,7 @@
 S3method(LOO,brmsfit)
 S3method(VarCorr,brmsfit)
 S3method(WAIC,brmsfit)
+S3method(add_ic,brmsfit)
 S3method(as.data.frame,brmsVarCorr)
 S3method(as.data.frame,brmsfit)
 S3method(as.matrix,brmsfit)
@@ -114,6 +115,7 @@ export(LOO)
 export(VarCorr)
 export(WAIC)
 export(acat)
+export(add_ic)
 export(as.mcmc)
 export(asym_laplace)
 export(bernoulli)
