@@ -85,6 +85,8 @@ based on the posterior likelihood using the \pkg{loo} package.
 When comparing models fitted to the same data, 
  the smaller the WAIC, the better the fit.
  For \code{brmsfit} objects, \code{waic} is an alias of \code{WAIC}.
+ Use method \code{\link[brms:add_ic]{add_ic}} to store
+ information criteria in the fitted model object for later usage.
 }
 \section{Methods (by class)}{
 \itemize{
